feat: Added all scripts

--- a/website/index.html
+++ b/website/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <script type="text/javascript">
-        var endpoint = "http://udacity-env.eba-vwt4qkks.us-east-1.elasticbeanstalk.com";
+        var endpoint = "Storefrontbackend-env.eba-quq9ajrf.us-east-1.elasticbeanstalk.com";
         window.addEventListener("load", function (event) {
             fetch(`${endpoint}/products`, {
                 headers: {
