--- a/website/index.html
+++ b/website/index.html
@@ -53,13 +53,13 @@
 
 <body>
     <div class="container">
-        <h1>School App</h1>
+        <h1>Store Front App</h1>
         <div class="products" id="products">
             <p id="loading">Loading..</p>
         </div>
     </div>
     <script type="text/javascript">
-        var endpoint = "https://new-env.eba-4pegxpyz.us-east-1.elasticbeanstalk.com";
+        var endpoint = "http://new-env.eba-4pegxpyz.us-east-1.elasticbeanstalk.com";
         window.addEventListener("load", function (event) {
             fetch(`${endpoint}/products`, {
                 headers: {
