--- a/website/www/index.html
+++ b/website/www/index.html
@@ -46,16 +46,16 @@
         .product-price {
             font-size: 18px;
             font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-            text-align: end;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>School App</h1>
+        <h1>Store Front App</h1>
         <div class="products" id="products">
             <p id="loading">Loading..</p>
+            <h2 id="label" style="display: none;">Our Products</h2>
         </div>
     </div>
     <script type="text/javascript">
@@ -69,8 +69,9 @@
                 .then((response) => response.json())
                 .then((products) => {
                     document.getElementById("loading").style.display = "none";
+                    document.getElementById("label").style.display = "block";
                     const productsElement = document.getElementById("products");
-                    products.forEach((product) => {
+                    products.data.forEach((product) => {
                         const productElement = document.createElement("div");
                         productElement.classList.add("product");
                         productElement.innerHTML = `
